# EclipseSDV_ibeji

./: .gitmodules  Cargo.toml  README.md
core/common/src/: utils.rs
core/invehicle-digital-twin/src/: main.rs
core/module/managed_subscribe/src/: managed_subscribe_module.rs
demo_configuration/: constants_settings.yaml  consumer_settings.yaml  invehicle_digital_twin_settings.yaml  managed_subscribe_settings.yaml  mosquitto.conf  provider_settings.yaml
digital-twin-model/dtdl/dtmi/sdv/: vehicle-1.json  vehicle-2.json
digital-twin-model/src/: sdv_v1.rs
dtdl-tools/src/dtdl-validator/: dtdl-validator.csproj
samples/Demo/: Cargo.toml
samples/Demo/led_driver/: Cargo.toml  build.rs  wrapper.h
samples/Demo/led_driver/src/: lib.rs
samples/Demo/speedometer-consumer/src/: dashboard_update.rs  main.rs
samples/Demo/speedometer-provider/src/: main.rs  provider_impl.rs
samples/common/: Cargo.toml
samples/common/src/: constants.rs  provider_config.rs
