# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]

name = "Speedometer-mood-lighting"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
async-std = { workspace = true, features = ["attributes"] }
digital-twin-model = { path = "../../digital-twin-model" }
env_logger= { workspace = true }
log = { workspace = true }
paho-mqtt = { workspace = true }
parking_lot = { workspace = true }
prost = { workspace = true }
samples-common = { path = "../common" }
samples-protobuf-data-access = { path = "../protobuf_data_access" }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tonic = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng", "macro-diagnostics"] }
ws = "*"
mio = "0.6.14"
mio-extras = "2.0"

[build-dependencies]
tonic-build = { workspace = true }
cc = { workspace = true }

[[bin]]
name = "speedometer-provider"
path = "speedometer-provider/src/main.rs"

[[bin]]
name = "speedometer-consumer"
path = "speedometer-consumer/src/main.rs"

# If built for aarch64, enable the 'vendored-ssl' feature.
[target.'cfg(target_arch = "aarch64")'.dependencies]
paho-mqtt = { workspace = true, features = ["vendored-ssl"] }
led_driver = { path = "led_driver" }
